@@ -1,3 +1,9 @@
+2008-09-09  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c
+	(bacon_video_widget_get_mrls): Also allow the Fluendo MPEG
+	demuxers recently moved to GStreamer main
+
 2008-09-08  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plugins/totem-plugins-engine.c
